tests/errors/substructural/check/copy_of_linear_struct.sim

        struct Linear { r: &out i64 }
        fn f(x: Linear) {
            y: Linear;
            entry:
            y = copy x;
            return
        }
        