tests/errors/substructural/check/copy_of_linear_struct.err.expected
error: at 6:13: [SUB-CopyOfNonCopy] In function 'f', block 'entry': cannot copy non-Copy type Linear
   |
 6 |             y = copy x;
   |             ^^^^^^^^^^
  hint: since the type is not Copy, try moving it instead using 'move'
